# C-plus-plus-modern-development-basics

./: README.md
Brown belt/1 week/Hash table/: CMakeLists.txt  hash_set.cpp
Brown belt/1 week/Person in unordered_set/: CMakeLists.txt  hash_person.cpp
Brown belt/1 week/Secondary index/: CMakeLists.txt  secondary_index.cpp
Brown belt/1 week/set::iterator++/: CMakeLists.txt  set_iterator_next.cpp
Brown belt/2 week/Code restructure/: CMakeLists.txt  main.cpp  stats_aggregator.cpp  stats_aggregator.h  stats_aggregator_test.cpp  test_runner.h
Brown belt/2 week/Collide/: CMakeLists.txt  collide.cpp  test_runner.h
Brown belt/2 week/Comment server/: CMakeLists.txt  comment_server.cpp
Brown belt/2 week/Ini parser/: CMakeLists.txt  ini.cpp  ini.h
Brown belt/2 week/LoadFromJSON/: CMakeLists.txt  spendings_json.cpp
Brown belt/2 week/LoadFromXML/: CMakeLists.txt  spendings_xml.cpp  xml.h
Brown belt/3 week/Concurrent map 2.0/: CMakeLists.txt  concurrent_map.cpp
Brown belt/3 week/Expression tree/: CMakeLists.txt  expression.cpp  main.cpp
Brown belt/Final project/: CMakeLists.txt  bus_catalog_ab.cpp  bus_catalog_c.cpp  bus_catalog_de.cpp  json.cpp  json.h
Red belt/Final project/: CMakeLists.txt  main.cpp  paginator.cpp  search_server.cpp  search_server.h
White belt/Final project/: CMakeLists.txt  fdf.txt  main.cpp
Yellow belt/Final project/: CMakeLists.txt  condition_parser.cpp  database.cpp  database.h  date.cpp  date.h  main.cpp  node.cpp  node.h  test_runner.cpp  test_runner.h  tests.h
Yellow belt/Unit test framework/: CMakeLists.txt  unit_test.cpp
(+212 files in other folders)
